feat: notes can be listed now

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
           </div>
         </div>
       </template>
-      <div class="note-container">
-        <template id="single-note">
-          <div class="note">
-            <p id="header"></p>
-            <p id="content"></p>
-          </div>
-        </template>
-      </div>
+      <template id="single-note">
+        <div class="SinNote">
+          <p id="header"></p>
+          <p id="content"></p>
+          <p id="date"></p>
+        </div>
+      </template>
     </div>
     <div id="app"></div>
+    <div id="note-container"></div>
   </body>
 </html>
