style: header is now sticky and date aligned to end

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="SinNote">
           <p id="header"></p>
           <p id="content"></p>
-          <p id="date"></p>
+          <div class="dateContainer">
+            <p id="date"></p>
+          </div>
         </div>
       </template>
     </div>
