feat: delete note button is now represnting

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
       </template>
       <template id="single-note">
         <div class="SinNote">
-          <p id="header"></p>
+          <div id="deleteBtnContainer">
+            <p id="header"></p>
+            <button id="deleteBtn" onclick="">Notu Sil</button>
+          </div>
+
           <p id="content"></p>
           <div class="dateContainer">
             <p id="date"></p>
