refactor: removed onclick definition on delete button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="SinNote">
           <div id="deleteBtnContainer">
             <p id="header"></p>
-            <button id="deleteBtn" onclick="">Notu Sil</button>
+            <button id="deleteBtn">Notu Sil</button>
           </div>
 
           <p id="content"></p>
