--- a/index.html
+++ b/index.html
@@ -19,26 +19,24 @@
               <button id="add-btn" class="add-btn">Not Ekle</button>
             </div>
           </div>
-          <div id="modal" class="modal">
-            <div id="note" class="note">
-              <form id="addNote">
-                <div>
-                  <input id="inputField" class="inputField input" type="text" placeholder="Başlık..." />
-                </div>
-                <div>
-                  <textarea id="inputFieldTxt" class="inputField" rows="7" placeholder="Not..."></textarea>
-                </div>
-                <hr />
-                <div id="checks"></div>
-                <div class="addbtnModalContainer">
-                  <button type="submit" class="createNoteModal">Not Oluştur</button
-                  ><button id="checklistAddBtn" class="checklistAddBtn">Checklist Ekle</button>
-                </div>
-              </form>
-            </div>
-          </div>
         </div>
       </template>
+      <div id="modal" class="modal">
+        <div id="note" class="note">
+          <form id="addNoteForm">
+            <div>
+              <input id="inputField" class="inputField input" type="text" placeholder="Başlık..." />
+            </div>
+            <div>
+              <textarea id="inputFieldTxt" class="inputField" rows="7" placeholder="Not..."></textarea>
+            </div>
+            <div class="addbtnModalContainer">
+              <button type="submit" id="modalAddNewNoteButton" class="createNoteModal">Not Oluştur</button>
+              <button type="reset" id="modalCancelButton" class="iptalBtn">İptal</button>
+            </div>
+          </form>
+        </div>
+      </div>
       <template id="single-note">
         <div class="SinNote">
           <div id="deleteBtnContainer">
@@ -50,12 +48,6 @@
           <div class="dateContainer">
             <p id="date"></p>
           </div>
-        </div>
-      </template>
-      <template id="checkboxTemplate">
-        <div>
-          <input type="checkbox" />
-          <p></p>
         </div>
       </template>
     </div>
