style: changed the position of add new note button

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div>
           <div id="note-container-header">
             <div class="header-content">
-              <h1>Notlar</h1>
+              <h1>NOTLARIM</h1>
             </div>
-            <div class="btn-container">
-              <button id="add-btn" class="add-btn">Not Ekle</button>
-            </div>
+          </div>
+          <div class="btn-container">
+            <button id="add-btn" class="add-btn">+</button>
           </div>
         </div>
       </template>
@@ -41,7 +41,7 @@
         <div class="SinNote">
           <div id="deleteBtnContainer">
             <p id="header"></p>
-            <button id="deleteBtn">Notu Sil</button>
+            <button id="deleteBtn">Sil</button>
           </div>
           <p id="content"></p>
           <ul id="checklist"></ul>
