--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes App</title>
     <link rel="stylesheet" href="styles/app.css" />
-    <script src="src/app.js" type="module"></script>
+    <script src="dist/bundle.js" type="module"></script>
   </head>
   <body>
     <div>
